--- a/css/sub_style.css
+++ b/css/sub_style.css
@@ -1151,6 +1151,116 @@ h2{
     
 }
 
+@media all and (max-width:626px){
+    #quick_btn {
+        position: fixed;
+        right: 10px;
+        bottom: 18px;
+        /* width: 100px; */
+        /* z-index: 100; */
+    }
+    #quick_btn .consulting .con_btn img {
+        height: 35px;
+    }
+    #quick_btn .consulting .con_btn span {
+        background-color: #5FC607;
+        border-radius: 50%;
+        display: block;
+        width: 60px;
+        height: 60px;
+        /* text-align: center; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 3px 3px 5px rgb(0 0 0 / 25%);
+    }
+    #quick_btn .consulting .consulting_box {
+        background-color: #f3f3f3;
+        border-radius: 10px;
+        /* padding: 30px; */
+        position: absolute;
+        bottom: -181px;
+        right: -3px;
+        /* display: none; */
+        z-index: -1;
+        height: 0;
+        overflow: hidden;
+        transition: 0.8s;
+        padding: 0 30px;
+        /* box-sizing: border-box; */
+        /* opacity: 0; */
+        z-index: 50;
+    }
+    #quick_btn .namyangmall .mall_btn span, #quick_btn .namyangi .i_btn span {
+        background-color: #fff;
+        border-radius: 50%;
+        display: block;
+        width: 60px;
+        height: 60px;
+        /* text-align: center; */
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        box-shadow: 3px 3px 5px rgb(0 0 0 / 25%);
+    }
+    #quick_btn .namyangmall .mall_btn img {
+        height: 19px;
+    }
+    #quick_btn .namyangi .i_btn img {
+        height: 47px;
+    }
+    #quick_btn .namyangi a, #quick_btn .namyangmall a {
+        display: block;
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: -1;
+        border-radius: 50px;
+        height: 60px;
+        /* display: none; */
+        width: 60px;
+        transition: 0.8s;
+        overflow: hidden;
+        /* background-color: black; */
+    }
+    #quick_btn .namyangi.active a, #quick_btn .namyangmall.active a {
+        /* display: block; */
+        width: 273px;
+        /* transform: translateX(67px); */
+        position: absolute;
+        right: 0;
+    }
+    #quick_btn .namyangi .i_on, #quick_btn .namyangmall .mall_on {
+        width: auto;
+        height: 60px;
+        /* border-top-right-radius: 50px; */
+        /* border-bottom-right-radius: 50px; */
+        transform: translateX(72px);
+        border-radius: 50px;
+    }
+    #quick_btn .top_btn {
+        background-color: #222222;
+        /* padding: 0 30px 8px 30px; */
+        width: 60px;
+        height: 27px;
+        border-radius: 50px;
+        margin-top: 10px;
+        font-size: 0px;
+        box-shadow: 3px 3px 5px rgb(0 0 0 / 25%);
+    }
+    #quick_btn .top_btn::after {
+        content: '';
+        display: block;
+        width: 10px;
+        height: 10px;
+        border-bottom: 2px solid #a7a7a7;
+        border-right: 2px solid #a7a7a7;
+        margin: auto;
+        transform: rotate(223deg) translate(7px, 8px);
+        text-align: center;
+    }
+}
+
 @media all and (max-width:444px){
     .inner {
         max-width: 1920px;
@@ -1185,10 +1295,19 @@ h2{
         width: 48px;
         padding-top: 55px;
     }
+    #main_tit {
+        padding-top: 159px;
+        padding-bottom: 10px;
+        position: relative;
+        top: 131px;
+        z-index: -1;
+        overflow: hidden;
+        margin-left: 0px;
+    }
     #main_tit h1 {
         position: absolute;
         top: 0;
-        left: 0px;
+        left: 23px;
     }
     #main_tit::after {
         content: '';
@@ -1198,7 +1317,7 @@ h2{
         border-top-left-radius: 90px;
         position: absolute;
         bottom: 0;
-        left: 0;
+        left: 6px;
         z-index: 2;
         transform: translateX(-6PX);
     }
@@ -1223,8 +1342,8 @@ h2{
         padding: 0 10px;
     }
     #section1 {
-        padding-top: 200px;
-    }
+        padding-top: 168px;
+    }    
     #section1 .esg .esg_txt p {
         font-size: 0.7rem;
     }
@@ -1236,7 +1355,7 @@ h2{
         padding-right: 5%;
     }
     #section2 {
-        padding-top: 20px;
+        padding-top: 52px;
     }
     #section2 .sec2_tit {
         text-align: center;
@@ -1249,7 +1368,7 @@ h2{
         padding-top: 30px;
     }
     #section3 {
-        padding-top: 50px;
+        padding-top: 30px;
     }
     #section3 .circle_txt {
         width: 80%;
@@ -1258,7 +1377,7 @@ h2{
         padding-top: 20px;
     }
     #section4 {
-        padding-top: 50px;
+        padding-top: 20px;
     }
     #section4 table {
         width: 100%;
@@ -1296,4 +1415,13 @@ h2{
     #section5 .sec5_chart > div{
         padding: 0;
     }
+    #quick_btn .consulting .consulting_box div textarea {
+        width: 240px;
+        height: 207px;
+        margin: 25px 0 10px 0;
+        border: none;
+        background-color: #ffffff;
+        border-radius: 10px;
+    }
+
 }
