--- a/css/style.css
+++ b/css/style.css
@@ -581,7 +581,7 @@ h2{
 
 /*********************section3****************************/
 #section3{
-    padding-top: 100px;
+    padding-top: 200px;
 }
 #section3 .inner {
     background-image: url(../images/care_cure.jpg);
@@ -605,6 +605,9 @@ h2{
 #section3 .sec3_tit p span{
     font-weight: 700;
     color: #7DC242;
+}
+#section3 .sec3_tit p b{
+    display: inline;
 }
 #section3 .icon_box.flex{
     justify-content: center;
@@ -1714,6 +1717,49 @@ h2{
 }
 
 @media all and (max-width:870px){
+    #new {
+        display:none;
+    }
+    #slide .slick-active h1{
+        position: absolute;
+        bottom: 10%;
+        left: 10%;
+        font-size: 3.5rem;
+        /*line-height: 4rem;
+        opacity: 0;
+        animation: 4s main_txt forwards;*/
+    }
+    #slide .slick-dots button {
+        background: #ffffff;
+        font-size: 0px;
+        width: 20px;
+        height: 20px;
+        border-radius: 50%;
+        margin: 0 10px;
+        transform: translateY(0px);
+    }
+    
+#slide div {
+    width: 100%;
+    height: 834px;
+    overflow: hidden;
+    position: relative;
+}
+#slide .slick-active h1 {
+    position: absolute;
+    bottom: 10%;
+    left: 10%;
+    font-size: 3rem;
+    line-height: 3.5rem;
+}
+
+@keyframes main_txt{
+    0% {opacity: 0; bottom: 10%;}
+    100% {opacity: 1; bottom: 30%;}
+}
+#section1{
+    padding-top: 100px;
+}
     #section2 .flex .rigth_txt2 .txt h4 {
         /* font-size: 1rem; */
         /* font-weight: 700; */
@@ -1759,17 +1805,9 @@ h2{
 
 @media all and (max-width:767px){
     h2{
-       font-size: 2rem; 
+       font-size: 2.5rem; 
     }
-    #slide .slick-active h1{
-        position: absolute;
-        bottom: 10%;
-        left: 10%;
-        font-size: 3.5rem;
-        /*line-height: 4rem;
-        opacity: 0;
-        animation: 4s main_txt forwards;*/
-    }
+    
     #section1 .sec1_list_pc .sec1_img h3 {
         /* line-height: 2rem; */
         font-size: 1rem;
@@ -1779,6 +1817,9 @@ h2{
         /* font-weight: 700; */
         /* line-height: 1.3rem; */
         padding-top: 10px;
+    }
+    #section3 .sec3_tit p b{
+        display: block
     }
     #banner a:nth-of-type(1){
         display: none;
@@ -1816,36 +1857,6 @@ h2{
     padding-top: 55px;
 }
 
-#slide div {
-    width: 100%;
-    height: 834px;
-    overflow: hidden;
-    position: relative;
-}
-#slide .slick-active h1 {
-    position: absolute;
-    bottom: 10%;
-    left: 10%;
-    font-size: 3rem;
-    line-height: 3.5rem;
-}
-#slide .slick-dots button {
-    background: #ffffff;
-    font-size: 0px;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    margin: 0 10px;
-    transform: translateY(0px);
-}
-@keyframes main_txt{
-    0% {opacity: 0; bottom: 10%;}
-    100% {opacity: 1; bottom: 30%;}
-}
-
-#new {
-    display:none;
-}
 
 #section1 {
     padding-top: 50px
